feat: implement PUT /v1/payments/{id:[0-9]+} endpoint and added documentation
